--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <title>React Project Template</title>
+    <title>Color Organizer</title>
   </head>
   <body>
     <div id="app"></div>
